Test github action on push to main

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,9 +1,7 @@
 name: deploy-container
 
 on:
-  pull_request_review:
-    types:
-      - submitted
+  push:
     branches:
       - main
     paths:
