--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,7 +1,9 @@
 name: deploy-container
 
 on:
-  push:
+  pull_request:
+    types:
+      - "closed"
     branches:
       - main
     paths:
@@ -13,6 +15,7 @@ defaults:
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +23,7 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - uses: chrislennon/action-aws-cli@v1.1
+      - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
