--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -2,8 +2,7 @@ name: deploy-container
 
 on:
   pull_request:
-    types:
-      - "closed"
+    types: [closed]
     branches:
       - main
     paths:
